# test-avropath-ts

./: CONTRIBUTING.md  README.md  avro-test.cabal  stack.yaml  tsconfig.json
idl-output/: A.avsc
src/: AvroPath.hs  AvroPathPrinter.hs  AvroPathServe.hs
tsoutput/: index.ts
