name:                avro-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/avro-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable avropath-print
  hs-source-dirs:      src
  main-is:             AvroPathPrinter.hs
  default-language:    Haskell2010
  other-modules:       AvroPath
  build-depends:       base >= 4.7 && < 5,
                       avro == 0.3.0.0,
                       bytestring >= 0.10,
                       aeson >= 1.2,
                       text >= 1.2,
                       pretty >= 1.1,
                       containers >= 0.5,
                       mtl >= 2.2,
                       prettyprinter

executable avropath-serve
  hs-source-dirs:      src
  main-is:             AvroPathServe.hs
  other-modules:       AvroPath
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       avro == 0.3.0.0,
                       bytestring >= 0.10,
                       aeson >= 1.2,
                       text >= 1.2,
                       pretty >= 1.1,
                       containers >= 0.5,
                       mtl >= 2.2,
                       prettyprinter,
                       pretty-simple,
                       Spock,
                       text,
                       generic-random,
                       QuickCheck,
                       quickcheck-instances